Additional fixes for overflow bug.

--- a/src/components/styles/_content-body.scss
+++ b/src/components/styles/_content-body.scss
@@ -1,7 +1,6 @@
 .content-body {
   padding-top: var(--spacer9);
   padding-bottom: var(--spacer7);
-  overflow: hidden;
   @include screen-sm {
     padding-bottom: 0;
   }
